--- a/src/app/pages/maintenance/product/product.component.html
+++ b/src/app/pages/maintenance/product/product.component.html
@@ -48,6 +48,7 @@
                   <th scope="col">Tipo de servicio</th>
                   <th scope="col">Nombre</th>
                   <th scope="col">Descripción</th>
+                  <th scope="col">Moneda</th>
                   <th scope="col">Precio</th>
                   <th scope="col">Estado</th>
                   <th scope="col">Fecha creado</th>
@@ -61,6 +62,7 @@
                   <td>{{data.tipo_servicios_nombre}}</td>
                   <td>{{data.nombre}}</td>
                   <td>{{data.descripcion}}</td>
+                  <td>{{data.divisas_nombre}}</td>
                   <td>{{data.precio}}</td>
                   <td><span class="badge text-md" [ngClass]="{ 'bg-success': data.is_active == 1, 'bg-danger': data.is_active == 0}">{{data.is_active? 'Activo': 'Inactivo'}}</span></td>
                   <td>{{data.created_at}}</td>
@@ -129,6 +131,38 @@
           </div>
         </div>
       </div>
+      <div class="row g-2">
+        <div class="col-md-6 mb-3" *ngIf="'FORMS.FIELD_NAMES.category.label' | translate as translatedLabel;">
+          <label for="categorias_id" class="form-label">{{translatedLabel}} *</label>
+          <ng-select id="categorias_id" formControlName="categorias_id" [ngClass]="{ 'is-invalid': form.categorias_id.errors && (form.categorias_id.dirty || form.categorias_id.touched || submitted) }">
+            <ng-option [value]="''">{{'FORMS.FIELD_NAMES.category.default_option' | translate}}</ng-option>
+            <ng-option *ngFor="let category of listCategories" [value]="category.id">{{category.nombre}}</ng-option>
+          </ng-select>
+          <div *ngIf="form.categorias_id.errors && (form.categorias_id.dirty || form.categorias_id.touched || submitted)" class="invalid-feedback" align="left">
+            <div *ngIf="form.categorias_id.errors.required">
+              {{'FORMS.VALIDATION.required' | translate | replaceAttribute:':attribute': translatedLabel}}
+            </div>
+            <div *ngIf="form.categorias_id.errors.min">
+              {{'FORMS.VALIDATION.min' | translate | replaceAttribute: ':attribute': translatedLabel | replaceAttribute: ':min': form.categorias_id.errors.min.requiredLength}}
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 mb-3" *ngIf="'FORMS.FIELD_NAMES.brand.label' | translate as translatedLabel;">
+          <label for="marcas_id" class="form-label">{{translatedLabel}} *</label>
+          <ng-select id="marcas_id" formControlName="marcas_id" [ngClass]="{ 'is-invalid': form.marcas_id.errors && (form.marcas_id.dirty || form.marcas_id.touched || submitted) }">
+            <ng-option [value]="''">{{'FORMS.FIELD_NAMES.brand.default_option' | translate}}</ng-option>
+            <ng-option *ngFor="let brand of listBrands" [value]="brand.id">{{brand.nombre}}</ng-option>
+          </ng-select>
+          <div *ngIf="form.marcas_id.errors && (form.marcas_id.dirty || form.marcas_id.touched || submitted)" class="invalid-feedback" align="left">
+            <div *ngIf="form.marcas_id.errors.required">
+              {{'FORMS.VALIDATION.required' | translate | replaceAttribute:':attribute': translatedLabel}}
+            </div>
+            <div *ngIf="form.marcas_id.errors.min">
+              {{'FORMS.VALIDATION.min' | translate | replaceAttribute: ':attribute': translatedLabel | replaceAttribute: ':min': form.marcas_id.errors.min.requiredLength}}
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="mb-3" *ngIf="'FORMS.FIELD_NAMES.name.label' | translate as translatedLabel;">
         <label for="nombre" class="form-label">{{translatedLabel}} *</label>
         <input type="text" id="nombre" class="form-control" placeholder="{{'FORMS.FIELD_NAMES.name.placeholder' | translate}}" formControlName="nombre" [ngClass]="{ 'is-invalid': form['nombre'].errors && (form.nombre.dirty || form.nombre.touched || submitted) }" />
@@ -149,6 +183,21 @@
         </div>
       </div>
       <div class="row g-2">
+        <div class="col-md-6 mb-3" *ngIf="'FORMS.FIELD_NAMES.currency.label' | translate as translatedLabel;">
+          <label for="divisas_id" class="form-label">{{translatedLabel}} *</label>
+          <ng-select id="divisas_id" formControlName="divisas_id" [ngClass]="{ 'is-invalid': form.divisas_id.errors && (form.divisas_id.dirty || form.divisas_id.touched || submitted) }">
+            <ng-option [value]="''">{{'FORMS.FIELD_NAMES.currency.default_option' | translate}}</ng-option>
+            <ng-option *ngFor="let currency of listCurrencies" [value]="currency.id">{{currency.nombre}}</ng-option>
+          </ng-select>
+          <div *ngIf="form.divisas_id.errors && (form.divisas_id.dirty || form.divisas_id.touched || submitted)" class="invalid-feedback" align="left">
+            <div *ngIf="form.divisas_id.errors.required">
+              {{'FORMS.VALIDATION.required' | translate | replaceAttribute:':attribute': translatedLabel}}
+            </div>
+            <div *ngIf="form.divisas_id.errors.min">
+              {{'FORMS.VALIDATION.min' | translate | replaceAttribute: ':attribute': translatedLabel | replaceAttribute: ':min': form.divisas_id.errors.min.requiredLength}}
+            </div>
+          </div>
+        </div>
         <div class="col-md-6 mb-3" *ngIf="'FORMS.FIELD_NAMES.price.label' | translate as translatedLabel;">
           <label for="precio" class="form-label">{{translatedLabel}}</label>
           <input type="text" id="precio" class="form-control" placeholder="{{'FORMS.FIELD_NAMES.price.placeholder' | translate}}" formControlName="precio" [ngClass]="{ 'is-invalid': form.precio.errors && (form.precio.dirty || form.precio.touched || submitted) }" />
