--- a/src/app/pages/maintenance/group/group.component.html
+++ b/src/app/pages/maintenance/group/group.component.html
@@ -83,7 +83,7 @@
                   <td>{{data.updated_at}}</td>
                   <td>
                     <ul class="list-unstyled hstack gap-1 mb-0">
-                      <li data-bs-toggle="tooltip" data-bs-placement="top" title="Edit">
+                      <li data-bs-toggle="tooltip" data-bs-placement="top" title="Ver detalle">
                         <a href="javascript:void(0);" class="btn btn-sm btn-soft-primary" (click)="openModalDetailGroup(data)"><i class="bx bx-detail"></i></a>
                       </li>
                       <li data-bs-toggle="tooltip" data-bs-placement="top" title="Edit">
