--- a/src/app/pages/main/main/main.component.html
+++ b/src/app/pages/main/main/main.component.html
@@ -1,18 +1,40 @@
-<!-- <app-loader></app-loader> -->
-
-
-
 <div class="container-fluid">
   <app-page-title title="Inicio" [breadcrumbItems]="breadCrumbItems"></app-page-title>
 
   <div class="row">
-    <div class="col-12">
+    <div class="col-6">
       <div class="card">
+        <div class="card-title">
+          <br>
+          <h1>   Anuncios Internos</h1>
+        </div>
+
         <div class="card-body">
-          <h4>Bienvenido</h4>
-          <p>main works!</p>
+
+          <app-advertisement> </app-advertisement>
+
+
+
+
+
         </div>
       </div>
     </div>
+
+
+   <div class="col-6">
+    <div class="card">
+      <div class="card-title">
+        <br>
+        <h1>    Anuncios Externos</h1>
+      </div>
+      <div class="card-body">
+
+
+      </div>
+    </div>
+    </div>
+
   </div>
 </div>
+
